Cria novos componentes de: maps, acelerometro, contatos

--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,7 @@
 
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyBd2tYUNhXk_bLyGwT94bQad8nL5XiVJYk"></script>
 </body>
 </html>
