--- a/src/pages/local-storage/local-storage.html
+++ b/src/pages/local-storage/local-storage.html
@@ -3,10 +3,10 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Maps</ion-title>
+    <ion-title>Local Storage</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <div #map id="map"></div>
+  localstorage
 </ion-content>
