--- a/src/pages/local-storage/local-storage.html
+++ b/src/pages/local-storage/local-storage.html
@@ -8,5 +8,14 @@
 </ion-header>
 
 <ion-content padding>
-  localstorage
+    <ion-list>
+        <ion-item>
+            <ion-input type="text" placeholder="Nome" [(ngModel)]="nome"></ion-input>
+        </ion-item>
+    </ion-list>
+
+    <div>
+        <button ion-button color="primary" (click)="save()">Salvar</button>
+        <button ion-button color="danger" (click)="clear()">Apagar</button>
+    </div>
 </ion-content>
