Define cabeçalho para a disciplina

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Trabalho Final Pós Graduação</h3>
-  <h2>Alunos</h2>
+  <h3>Desenvolvimento de Aplicações Móveis Híbridas</h3>
+  <h2>UFT</h2>
   <ion-list>
     <ion-item *ngFor="let aluno of alunos">
        <h2>{{aluno.nome}}</h2>
